--- a/my-website/src/pages/About.css
+++ b/my-website/src/pages/About.css
@@ -1,6 +1,7 @@
 .About {
     background-color: rgba(131, 7, 122, 0.444);
-    padding-bottom: 30px;
+    padding-top: 15px;
+    padding-bottom: 40px;
 }
 
 .Title {
